infra/k8s/api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shl-api-depl
spec:
  selector:
    matchLabels:
      app: shl-api
  template:
    metadata:
      labels:
        app: shl-api
    spec:
      containers:
        - name: shl-api
          image: viktorzetterstrom/shl-api
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: shl-api-srv
spec:
  type: ClusterIP
  selector:
    app: shl-api
  ports:
    - port: 3000
      targetPort: 3000
