infra/k8s/api-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shl-api-redis-depl
spec:
  selector:
    matchLabels:
      app: shl-api-redis
  template:
    metadata:
      labels:
        app: shl-api-redis
    spec:
      containers:
        - name: shl-api-redis
          image: redis
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: shl-api-redis-srv
spec:
  type: ClusterIP
  selector:
    app: shl-api-redis
  ports:
    - port: 6379
      targetPort: 6379
