infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shl-client-depl
spec:
  selector:
    matchLabels:
      app: shl-client
  template:
    metadata:
      labels:
        app: shl-client
    spec:
      containers:
        - name: shl-client
          image: viktorzetterstrom/shl-client
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: shl-client-srv
spec:
  selector:
    app: shl-client
  ports:
    - port: 3000
      targetPort: 3000
